# Co2_Gold_AI_Pipeline

./: .gitignore  README.txt  ml_pipeline.py  pyproject.toml  redner.yaml  render.yaml  requirements.txt  runtime.txt
Co2_Gold_AI_Pipeline/: README.txt
static/: ai_input.json
