[tool.poetry]
name = "co2-gold-ai"
version = "0.1.0"
description = "Gold trading ML API for MT5"
authors = ["Co2 AI Bot"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
pandas = "*"
scikit-learn = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
